[package]
name = "mergeconflict-tgbot"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
license = "AGPL-3.0"
authors = ["Alexander A. Klimov <aklimov@icinga.com>"]

[dependencies]
octocrab = "0.45.0"
serde_json = "1.0.145"
sqlite = "0.37.0"
teloxide = "0.17.0"

[dependencies.serde]
version = "1.0.225"
features = ["derive"]

[dependencies.tokio]
version = "1.47.1"
features = ["macros"]
